syntax = "proto3";

package turnly.tenancy.v1.members;

message GetMemberRequest {
  string id = 1;
}

message GetMemberByUserIdRequest {
  string user_id = 1;
}
